--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <body>
         <center>
           
-        <img src="./image/kec logo.jpg">
+        <img src="./kec logo.jpg">
         <h1>Kongu Engineering college</h1>
         <h1>Information Technology</h1>
         <h2>Visit our official website for more details</h2>
         <a href="https://kongu.ac.in/">click here</a><br><br>
-        <a href="https://kongu.ac.in/"> <img src="./image/k.png"></a>
+        <a href="https://kongu.ac.in/"> <img src="./k.png"></a>
         </center>
        <hr> <h3 style="color:blue;">About Course: </h3>
         <p>The <b>BE / BTech</b> programme shall have a curriculum with syllabi comprising of theory,
